--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "my-app",
   "version": "0.0.0",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "build": "concurrently \"cd client && npm run build\" \"npm build \"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd ./client && npm start ",
-    "server-prod": "node server.js",
-    "server": "nodemon server.js",
-    "start": "node server.js",
-    "start:dev": "concurrently --kill-others  \"npm run client\" \"npm run server\" ",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "ng": "ng",
+    "build": "ng build && node server.js",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "start": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
