--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "start": "ng build",
-    "heroku-postbuild": "node server.js"
+    "start": "ng build && node server.js",
+    "build": "ng build && node server.js",
+    "run-watch": "ng build && node server.js",
+    "preinstall": "npm install -g @angular/cli",
+    "postinstall": "ng build -prod",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "watch": "npm-watch"
   },
   "private": true,
   "dependencies": {
