--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build && node server.js",
     "run-watch": "ng build && node server.js",
     "preinstall": "npm install -g @angular/cli",
-    "postinstall": "ng build -prod",
+    "postinstall": "ng build --prod",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "watch": "npm-watch"
